# Website

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json  stats.db  stats.json
sass/: styles.scss
src/: api.rs  info.rs  main.rs  structs.rs
static/css/: bulma.css  styles.css
templates/: index.hbs  index.html.hbs
